--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.northamericanlicenseplategame">
 
     <application
@@ -37,6 +38,11 @@
         <activity
             android:name=".settingsActivity"
             android:exported="true">
+        </activity>
+        <activity
+            android:name=".Plate"
+            android:exported="true"
+            tools:ignore="Instantiatable">
         </activity>
 
     </application>
